--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -104,6 +104,16 @@
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+
+        <div class="modal fade bd-example-modal-lg modalloader"  data-backdrop="static" data-keyboard="false" tabindex="-1">
+            <div class="modal-dialog modal-sm" id="modalloader">
+                <div class="modal-content" style="width: 48px">
+                    <div class="spinner-border" role="status">
+                        <span class="sr-only">Loading...</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer class="border-top footer text-muted">
