--- a/Views/BillDetail/Creates.cshtml
+++ b/Views/BillDetail/Creates.cshtml
@@ -13,6 +13,7 @@
             @Html.HiddenFor(x => x.Bill.Customers.CustomerId)
             @Html.HiddenFor(x => x.BillDetail.AllProductId)
             @Html.HiddenFor(x => x.Bill.BillId)
+            @Html.HiddenFor(x => x.BillDetail.BillDetailId)
             <div class="row">
                 <div class="col-md-1">
                     <div class="form-group">
@@ -104,7 +105,7 @@
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <input asp-for="BillDetail.Discount"  class="form-control form-control-sm" />
+                        <input asp-for="BillDetail.Discount" class="form-control form-control-sm" />
                         <span asp-validation-for="BillDetail.Discount" class="text-danger"></span>
                     </div>
                 </div>
@@ -115,7 +116,7 @@
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <input asp-for="BillDetail.Feet"  class="form-control form-control-sm" />
+                        <input asp-for="BillDetail.Feet" class="form-control form-control-sm" />
                         <span asp-validation-for="BillDetail.Feet" class="text-danger"></span>
                     </div>
                 </div>
@@ -126,7 +127,7 @@
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <input asp-for="BillDetail.Quantity"  class="form-control form-control-sm" />
+                        <input asp-for="BillDetail.Quantity" class="form-control form-control-sm" />
                         <span asp-validation-for="BillDetail.Quantity" class="text-danger"></span>
                     </div>
                 </div>
@@ -139,7 +140,7 @@
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <input asp-for="BillDetail.TotalFeet"  readonly="readonly" class="form-control form-control-sm" />
+                        <input asp-for="BillDetail.TotalFeet" readonly="readonly" class="form-control form-control-sm" />
                         <span asp-validation-for="BillDetail.TotalFeet" class="text-danger"></span>
                     </div>
                 </div>
@@ -150,7 +151,7 @@
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <input asp-for="BillDetail.NetAmount"  readonly="readonly" class="form-control form-control-sm" />
+                        <input asp-for="BillDetail.NetAmount" readonly="readonly" class="form-control form-control-sm" />
                         <span asp-validation-for="BillDetail.NetAmount" class="text-danger"></span>
                     </div>
                 </div>
@@ -161,7 +162,7 @@
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <input asp-for="BillDetail.DiscountedAmount"  readonly="readonly" class="form-control form-control-sm" />
+                        <input asp-for="BillDetail.DiscountedAmount" readonly="readonly" class="form-control form-control-sm" />
                         <span asp-validation-for="BillDetail.DiscountedAmount" class="text-danger"></span>
                     </div>
                 </div>
@@ -172,7 +173,7 @@
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <input asp-for="BillDetail.AmountToBePaid"  readonly="readonly" class="form-control form-control-sm" />
+                        <input asp-for="BillDetail.AmountToBePaid" readonly="readonly" class="form-control form-control-sm" />
                         <span asp-validation-for="BillDetail.AmountToBePaid" class="text-danger"></span>
                     </div>
                 </div>
@@ -186,7 +187,7 @@
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <input asp-for="BillDetail.SheetHeight"  class="form-control form-control-sm pGlass" />
+                        <input asp-for="BillDetail.SheetHeight" class="form-control form-control-sm pGlass" />
                         <span asp-validation-for="BillDetail.SheetHeight" class="text-danger pGlass"></span>
                     </div>
 
@@ -198,7 +199,7 @@
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <input asp-for="BillDetail.SheetWidth"  class="form-control form-control-sm pGlass" />
+                        <input asp-for="BillDetail.SheetWidth" class="form-control form-control-sm pGlass" />
                         <span asp-validation-for="BillDetail.SheetWidth" class="text-danger"></span>
                     </div>
                 </div>
