--- a/Views/AllProduct/Edit.cshtml
+++ b/Views/AllProduct/Edit.cshtml
@@ -24,43 +24,24 @@
                 <span asp-validation-for="Rate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CreatedById" class="control-label"></label>
-                <input asp-for="CreatedById" class="form-control" />
-                <span asp-validation-for="CreatedById" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ModifiedById" class="control-label"></label>
-                <input asp-for="ModifiedById" class="form-control" />
-                <span asp-validation-for="ModifiedById" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ModifiedDate" class="control-label"></label>
-                <input asp-for="ModifiedDate" class="form-control" />
-                <span asp-validation-for="ModifiedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Deleted" /> @Html.DisplayNameFor(model => model.Deleted)
-                </label>
-            </div>
-            <div class="form-group">
                 <label asp-for="ProductTypeId" class="control-label"></label>
-                <select asp-for="ProductTypeId" class="form-control" asp-items="ViewBag.ProductTypeId"></select>
+                <select asp-for="ProductTypeId" class="form-control" asp-items="ViewBag.ProductTypeId">
+                    <option></option>
+                </select>
                 <span asp-validation-for="ProductTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AluminumColorId" class="control-label"></label>
-                <select asp-for="AluminumColorId" class="form-control" asp-items="ViewBag.AluminumColorId"></select>
+                <select asp-for="AluminumColorId" class="form-control" asp-items="ViewBag.AluminumColorId">
+                    <option></option>
+                </select>
                 <span asp-validation-for="AluminumColorId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AluminumGageId" class="control-label"></label>
-                <select asp-for="AluminumGageId" class="form-control" asp-items="ViewBag.AluminumGageId"></select>
+                <select asp-for="AluminumGageId" class="form-control" asp-items="ViewBag.AluminumGageId">
+                    <option></option>
+                </select>
                 <span asp-validation-for="AluminumGageId" class="text-danger"></span>
             </div>
             <div class="form-group">
