--- a/Views/Shared/_BillDetails.cshtml
+++ b/Views/Shared/_BillDetails.cshtml
@@ -100,22 +100,22 @@
         <tr>
             <td class="thHeight"></td>
             <td class="thwidth"></td>
-            <td colspan="10"></td>
-            <td class="border-top border-dark">Total Amount</td>
+            <td colspan="9"></td>
+            <td colspan="2" class="border-top border-dark">Total Amount</td>
             <td class="border-top border-dark">@Model.Bill.NetAmount</td>
         </tr>
         <tr>
             <td class="thHeight"></td>
             <td class="thwidth"></td>
-            <td colspan="10"></td>
-            <td>Discounted Amount</td>
+            <td colspan="9"></td>
+            <td colspan="2">Discounted Amount</td>
             <td>@Model.Bill.TotalDiscount</td>
         </tr>
         <tr>
             <td class="thHeight"></td>
             <td class="thwidth"></td>
-            <td colspan="10"></td>
-            <td class="border-top border-dark">Final Amount</td>
+            <td colspan="9"></td>
+            <td colspan="2" class="border-top border-dark">Final Amount</td>
             <td class="border-top border-dark">@Model.Bill.Total</td>
         </tr>
     </tfoot>
