--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 <h1>User Login</h1>
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6 justify-content-center">
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
