--- a/Views/BillDetail/Creates.cshtml
+++ b/Views/BillDetail/Creates.cshtml
@@ -1,4 +1,4 @@
-﻿@model Zedx.Models.ViewModel.BillandBillDetail
+﻿@model Zedx.Models.DTO.BillRequest
 
 
 @{
@@ -10,10 +10,8 @@
     <div class="col-md-12">
         <form asp-action="Creates" id="BillDetailForm" method="post" data-ajax="true" data-ajax-success="onSuccess" data-ajax-method="post" data-ajax-update="#divAddProducts" data-ajax-loading=".modalloader">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @Html.HiddenFor(x => x.Bill.Customers.CustomerId)
-            @Html.HiddenFor(x => x.BillDetail.AllProductId)
-            @Html.HiddenFor(x => x.Bill.BillId)
-            @Html.HiddenFor(x => x.BillDetail.BillDetailId)
+            @Html.HiddenFor(x => x.AllProductId)
+            @Html.HiddenFor(x => x.BillDetailId)
             <div class="row">
                 <div class="col-md-1">
                     <div class="form-group">
@@ -22,7 +20,7 @@
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <label id="lblBillId" class="control-label">@Model.Bill.BillId</label>
+                        <label id="lblBillId" class="control-label">@Model.BillId</label>
                     </div>
                 </div>
                 <div class="col-md-1">
@@ -32,7 +30,7 @@
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <select class="form-control form-control-sm" asp-for="Bill.CustomerId" asp-items="ViewBag.CustomerId">
+                        <select class="form-control form-control-sm" asp-for="CustomerId" asp-items="ViewBag.CustomerId">
                             <option></option>
                         </select>
                     </div>
@@ -51,24 +49,24 @@
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <label asp-for="BillDetail.AluminumColorId" class="control-label"></label>
+                        <label asp-for="AluminumColorId" class="control-label"></label>
                     </div>
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <select asp-for="BillDetail.AluminumColorId" class="form-control form-control-sm pAlum" asp-items="ViewBag.AluminumColorId">
+                        <select asp-for="AluminumColorId" class="form-control form-control-sm pAlum" asp-items="ViewBag.AluminumColorId">
                             <option></option>
                         </select>
                     </div>
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <label asp-for="BillDetail.AluminumGageId" class="control-label"></label>
+                        <label asp-for="AluminumGageId" class="control-label"></label>
                     </div>
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <select asp-for="BillDetail.AluminumGageId" class="form-control form-control-sm pAlum" asp-items="ViewBag.AluminumGageId">
+                        <select asp-for="AluminumGageId" class="form-control form-control-sm pAlum" asp-items="ViewBag.AluminumGageId">
                             <option></option>
                         </select>
                     </div>
@@ -77,130 +75,130 @@
             <div class="row">
                 <div class="col-md-1">
                     <div class="form-group">
-                        <label asp-for="BillDetail.AllProduct.Name" class="control-label"></label>
+                        <label asp-for="ProductName" class="control-label">Name</label>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="form-group">
-                        <input asp-for="BillDetail.AllProduct.Name" autocomplete="off" class="form-control form-control-sm" />
-                        <span asp-validation-for="BillDetail.AllProduct.Name" class="text-danger"></span>
+                        <input asp-for="ProductName" autocomplete="off" class="form-control form-control-sm" />
+                        <span asp-validation-for="ProductName  " class="text-danger"></span>
                         <div id="divProductsSerachResults"></div>
                     </div>
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <label asp-for="BillDetail.Rate" class="control-label"></label>
+                        <label asp-for="Rate" class="control-label"></label>
                     </div>
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <input asp-for="BillDetail.Rate" class="form-control form-control-sm" />
-                        <span asp-validation-for="BillDetail.Rate" class="text-danger"></span>
+                        <input asp-for="Rate" class="form-control form-control-sm" />
+                        <span asp-validation-for="Rate" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <label asp-for="BillDetail.Discount" class="control-label"></label>
+                        <label asp-for="Discount" class="control-label"></label>
                     </div>
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <input asp-for="BillDetail.Discount" class="form-control form-control-sm" />
-                        <span asp-validation-for="BillDetail.Discount" class="text-danger"></span>
+                        <input asp-for="Discount" class="form-control form-control-sm" />
+                        <span asp-validation-for="Discount" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <label asp-for="BillDetail.Feet" class="control-label"></label>
+                        <label asp-for="Feet" class="control-label"></label>
                     </div>
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <input asp-for="BillDetail.Feet" class="form-control form-control-sm" />
-                        <span asp-validation-for="BillDetail.Feet" class="text-danger"></span>
+                        <input asp-for="Feet" class="form-control form-control-sm" />
+                        <span asp-validation-for="Feet" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <label asp-for="BillDetail.Quantity" class="control-label"></label>
+                        <label asp-for="Quantity" class="control-label"></label>
                     </div>
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <input asp-for="BillDetail.Quantity" class="form-control form-control-sm" />
-                        <span asp-validation-for="BillDetail.Quantity" class="text-danger"></span>
+                        <input asp-for="Quantity" class="form-control form-control-sm" />
+                        <span asp-validation-for="Quantity" class="text-danger"></span>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-1">
                     <div class="form-group">
-                        <label asp-for="BillDetail.TotalFeet" class="control-label"></label>
+                        <label asp-for="TotalFeet" class="control-label"></label>
                     </div>
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <input asp-for="BillDetail.TotalFeet" readonly="readonly" class="form-control form-control-sm" />
-                        <span asp-validation-for="BillDetail.TotalFeet" class="text-danger"></span>
+                        <input asp-for="TotalFeet" readonly="readonly" class="form-control form-control-sm" />
+                        <span asp-validation-for="TotalFeet" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <label asp-for="BillDetail.NetAmount" class="control-label"></label>
+                        <label asp-for="NetAmount" class="control-label"></label>
                     </div>
                 </div>
                 <div class="col-md-1">
                     <div class="form-group">
-                        <input asp-for="BillDetail.NetAmount" readonly="readonly" class="form-control form-control-sm" />
-                        <span asp-validation-for="BillDetail.NetAmount" class="text-danger"></span>
+                        <input asp-for="NetAmount" readonly="readonly" class="form-control form-control-sm" />
+                        <span asp-validation-for="NetAmount" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <label asp-for="BillDetail.DiscountedAmount" class="control-label"></label>
+                        <label asp-for="DiscountedAmount" class="control-label"></label>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <input asp-for="BillDetail.DiscountedAmount" readonly="readonly" class="form-control form-control-sm" />
-                        <span asp-validation-for="BillDetail.DiscountedAmount" class="text-danger"></span>
+                        <input asp-for="DiscountedAmount" readonly="readonly" class="form-control form-control-sm" />
+                        <span asp-validation-for="DiscountedAmount" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <label asp-for="BillDetail.AmountToBePaid" class="control-label"></label>
+                        <label asp-for="AmountToBePaid" class="control-label"></label>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <input asp-for="BillDetail.AmountToBePaid" readonly="readonly" class="form-control form-control-sm" />
-                        <span asp-validation-for="BillDetail.AmountToBePaid" class="text-danger"></span>
+                        <input asp-for="AmountToBePaid" readonly="readonly" class="form-control form-control-sm" />
+                        <span asp-validation-for="AmountToBePaid" class="text-danger"></span>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-2">
                     <div class="form-group">
-                        <label asp-for="BillDetail.SheetHeight" class="control-label"></label>
+                        <label asp-for="SheetHeight" class="control-label"></label>
                     </div>
 
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <input asp-for="BillDetail.SheetHeight" class="form-control form-control-sm pGlass" />
-                        <span asp-validation-for="BillDetail.SheetHeight" class="text-danger pGlass"></span>
+                        <input asp-for="SheetHeight" class="form-control form-control-sm pGlass" />
+                        <span asp-validation-for="SheetHeight" class="text-danger pGlass"></span>
                     </div>
 
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <label asp-for="BillDetail.SheetWidth" class="control-label"></label>
+                        <label asp-for="SheetWidth" class="control-label"></label>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <input asp-for="BillDetail.SheetWidth" class="form-control form-control-sm pGlass" />
-                        <span asp-validation-for="BillDetail.SheetWidth" class="text-danger"></span>
+                        <input asp-for="SheetWidth" class="form-control form-control-sm pGlass" />
+                        <span asp-validation-for="SheetWidth" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -225,7 +223,7 @@
             </div>
             <div class="row">
                 <div class="col-12" id="divAddProducts">
-                    <partial name="_BillDetails" model="Model">
+                    @*<partial name="_BillDetails" model="Model">*@
                 </div>
             </div>
         </form>
