--- a/Views/Shared/_BillFilter.cshtml
+++ b/Views/Shared/_BillFilter.cshtml
@@ -29,6 +29,10 @@
 </div>
 <script>
     function openBill() {
+
+        //$("#BillId").val($("#ddlbillId").val());
+        //$("#CustomerId").val("1");
+        //$("#BillDetailForm").submit();
         window.location = "/BillDetail/Creates?BillId=" + $("#ddlbillId").val();
     }
 </script>
