--- a/Views/Shared/_BillDetails.cshtml
+++ b/Views/Shared/_BillDetails.cshtml
@@ -4,7 +4,7 @@
 <input type="hidden" value="@Model.BillId" name="BillId" id="BillId">
 <input type="hidden" value="@Model.CustomerId" name="BillId" id="CustomerId">
 @{ var row = 0; }
-<table class="table table-sm table-striped">
+<table class="table table-sm table-striped" style="font-size:16pt">
     <thead>
         <tr>
             <th>#</th>
