product select  from keyboard up and down

--- a/Views/Shared/_ProductSearchResult.cshtml
+++ b/Views/Shared/_ProductSearchResult.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Zedx.Models.AllProduct>
 
-    <table class="table">
+    <table class="table" id="ProductSearch">
         <thead>
             <tr>
                 <th>
