--- a/Views/BillDetail/Print.cshtml
+++ b/Views/BillDetail/Print.cshtml
@@ -6,24 +6,24 @@
 <div id="divPrint">
     <div>
         <div class="row border border-dark">
-            <div class="col-md-1"></div>
-            <div class="col-md-10 font-weight-bold text-center"><h1>Haji Aluminum,Glass and Hardware Store</h1></div>
-            <div class="col-md-1"></div>
-            <div class="col-md-12 text-center">High Court Road, Near Car-Chowk, Bahria Town, 0300-5542400 , 03005014526</div>
+            
+            <div class="col-md-12 font-weight-bold text-center" style="font-size:35pt">Haji Aluminum,Glass and Hardware Store</div>
+            
+            <div class="col-md-12 text-center"><h5>High Court Road, Near Car-Chowk, Bahria Town, 0300-5542400 , 03005014526</h5></div>
         </div>
         <div class="row mt-1 mb-1">
             <div class="row col-md-12">
-                <div class="col-md-2 font-weight-bold"><h6>Bill Id</h6></div><div class="col-md-2 font-weight-bold"><h6>@Model.BillId</h6></div>
+                <div class="col-md-2 font-weight-bold"><h4>Bill Id</h4></div><div class="col-md-2 font-weight-bold"><h4>@Model.BillId</h4></div>
                 <div class="col-md-2 font-weight-bold"></div>
-                <div class="col-md-2 font-weight-bold"><h6>Customer</h6></div><div class="col-md-4 font-weight-bold float-left"><h6>@Model.CustomerName</h6></div>
+                <div class="col-md-2 font-weight-bold"><h4>Customer</h4></div><div class="col-md-4 font-weight-bold float-left"><h4>@Model.CustomerName</h4></div>
             </div>
             <div class="row col-md-12">
-                <div class="col-md-2 font-weight-bold"><h6>Date</h6></div><div class="col-md-2 font-weight-bold float-left"><h6>@Model.BillDate</h6></div>
+                <div class="col-md-2 font-weight-bold"><h4>Date</h4></div><div class="col-md-2 font-weight-bold float-left"><h4>@Model.BillDate</h4></div>
                 <div class="col-md-2 font-weight-bold"></div>
-                <div class="col-md-2 font-weight-bold"><h6>Number</h6></div><div class="col-md-4 font-weight-bold float-left"><h6>@Model.Number</h6></div>
+                <div class="col-md-2 font-weight-bold"><h4>Number</h4></div><div class="col-md-4 font-weight-bold float-left"><h4>@Model.Number</h4></div>
             </div>
             <div class="row col-md-12">
-                <div class="col-md-2 font-weight-bold"><h6>Address</h6></div><div class="col-md-10 font-weight-bold float-left"><h6>@Model.Address</h6></div>
+                <div class="col-md-2 font-weight-bold"><h5>Address</h5></div><div class="col-md-10 font-weight-bold float-left"><h4>@Model.Address</h4></div>
             </div>
         </div>
         <div class="row border border-dark mt-1 mb-1">
