--- a/Views/BillPrint/Index.cshtml
+++ b/Views/BillPrint/Index.cshtml
@@ -7,13 +7,13 @@
         <div>
             <div class="row border border-dark">
                 <div class="col-md-3"></div>
-                <div class="col-md-6"><h4>Haji Aluminum,Glass and Hardware Store</h4></div>
+                <div class="col-md-6"><h3>Haji Aluminum,Glass and Hardware Store</h3></div>
                 <div class="col-md-3"></div>
             </div>
             <div class="row border border-dark mt-1 mb-1">
-                <div class="col-md-1">Bill Id</div><div class="col-md-1">@Model.BillId</div>
-                <div class="col-md-1">Customer</div><div class="col-md-2">@Model.CustomerName</div>
-                <div class="col-md-1">Date</div><div class="col-md-2">@Model.BillDate</div>
+                <div class="col-md-1"><h5></h5>Bill Id</h5></div><div class="col-md-1"> <h5> @Model.BillId </h5></div>
+                <div class="col-md-1"><h5>Customer</h5></div><div class="col-md-2"><h5> @Model.CustomerName </h5></div>
+                <div class="col-md-1"><h5>Date</h5></div><div class="col-md-2"><h5> @Model.BillDate </h5></div>
             </div>
         </div>
 
