--- a/Views/Shared/_BillDetails.cshtml
+++ b/Views/Shared/_BillDetails.cshtml
@@ -4,7 +4,7 @@
 <input type="hidden" value="@Model.BillId" name="BillId" id="BillId">
 <input type="hidden" value="@Model.CustomerId" name="BillId" id="CustomerId">
 @{ var row = 0; }
-<table class="table table-sm table-striped" style="font-size:16pt">
+<table class="table table-sm table-striped" style="font-size:18pt">
     <thead>
         <tr>
             <th>#</th>
@@ -72,7 +72,7 @@
 
                     </td>
                     <td class="tdAction">
-                        <div class="row justify-content-end">
+                        <div class="row">
                             <span class="col-md-4 col" title="remove product" onclick="RemoveProduct(this)">
                                 <svg width="1em" height="1em" viewBox="0 0 20 20" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
@@ -120,3 +120,10 @@
         </tr>
     </tfoot>
 </table>
+
+<style>
+   tr,th, td {
+        border: 1px solid black;
+    }
+
+</style>
